2007-03-29  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Contacts/UIxContactsUserFolders.m: new template module for
	selecting users or user folders through an LDAP search of which
	the results are displayed as a tree.

	* UI/WebServerResources/UIxMailEditor.js: moved previous generic
	method "onContactAdd" here since the Mailer is now the only module
	to use it when composing emails.

	* UI/WebServerResources/generic.js: added code for handling the
	new scheme used for describing SOGo folders, common code to handle
	folder addition or removal.

	* UI/Common/UIxFolderActions.m ([UIxFolderActions
	-activateFolderAction]): new method that change the "active"
	settings in the folder-related fields in the user settings.
	([UIxFolderActions -deactivateFolderAction]): see above.

	* UI/Contacts/UIxContactFoldersView.m ([UIxContactFoldersView
	-checkRightsAction]): removed method.

	* UI/Contacts/UIxContactFoldersView.m ([UIxContactFoldersView
	-updateAdditionalAddressBooksAction]): removed method.

	* UI/Scheduler/UIxCalMainView.m ([UIxCalMainView
	-updateCalendarsAction]): removed method.

2007-03-28  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Scheduler/UIxCalMainView.m ([UIxCalMainView
	-checkRightsAction]): removed method.

	* UI/Common/UIxFolderActions.m ([UIxFolderActions
	-canAccessContentAction]): new method designed to replace
	[UIxCalMainView checkRightsAction] in a more universal way.

2007-03-27  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Contacts/SOGoContactFolders.m ([SOGoContactFolders
	-roleOfUser:uidinContext:context]): take all the subkeys into
	account, not only the "personal" folder.

	* UI/Scheduler/UIxComponentEditor.m ([UIxComponentEditor
	-takeValuesFromRequest:_rqinContext:_ctx]): append a "uid" field
	to the new components.

	* SoObjects/SOGo/SOGoUser.m ([SOGoUser -userSettings]): new method
	(see below).

	* SoObjects/SOGo/AgenorUserManager.m ([AgenorUserManager